# cirrocumulus

./: .gcloudignore  .gitattributes  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  .travis.yml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Dockerfile.test  LICENSE  MANIFEST.in  README.md  README.rst  app.yaml  build.sh  main.py  package-lock.json  package.json  pyproject.toml  pytest.ini  requirements-test.txt  requirements.txt  setup.py  test.py  test2.py
.github/workflows/: test.yml
cirro/: __main__.py  abstract_dataset.py  anndata_dataset.py  api.py  config.json  data_processing.py  database_api.py  dataset_api.py  datastore_api.py  dotplot_aggregator.py  embedding_aggregator.py  empty_cache.py  entity.py  feature_aggregator.py  file_system.py  file_system_adapter.py  firestore_datastore.py  google_auth.py  h5ad_backend.py  h5ad_dataset.py  ids_aggregator.py  invalid_usage.py  io.py  launch.py  local_db_api.py  parquet_backend.py  parquet_dataset.py  parquet_io.py  prepare_data.py  selection_aggregator.py  simple_data.py  stat_util.py  unique_aggregator.py  unique_index_aggregator.py  util.py  zarr_dataset.py
cirro/tests/: conftest.py  test_dot_plot.py  test_embedding.py  test_feature.py  test_ids.py  test_save_dataset.py  test_selection.py
cirrocumulus/: __init__.py  __main__.py  abstract_backed_dataset.py  abstract_dataset.py  abstract_db.py  anndata_dataset.py  anndata_util.py  anndata_zarr.py  api.py  auth_api.py  auth_exception.py  blueprint_util.py  cloud_datastore.py  cloud_firestore.py  cloud_firestore_native.py  concat.py  config.json  data_processing.py  database_api.py  dataset_api.py  de.py  diff_exp.py  dotplot_aggregator.py  embedding_aggregator.py  envir.py  fdr.py  feature_aggregator.py  file_system_adapter.py  firestore_datastore.py  google_auth.py  groupby.py  h5ad_dataset.py  h5ad_output.py  ids_aggregator.py  invalid_usage.py  io_util.py  job_api.py  json_io.py  jsonl_io.py  launch.py  (+21 more)
cirrocumulus/ot/: population.py  transport_map_model.py  util.py
cirrocumulus/tests/: conftest.py  test_dot_plot.py  test_embedding.py  test_feature.py
docker/: Dockerfile  README.md  docker-compose.yml  mongo-init.sh
docs/: 1.3M_neurons_variable_genes.h5ad  Makefile  command_line.rst  commands.rst  conf.py  contact.rst  documentation.rst  header.rst  index.rst  installation.rst  markers.json  quick_start.rst  release_notes.rst  requirements.txt  source.rst  tutorial.rst
docs/_static/: my_theme.css
e2e/: jest-puppeteer.config.js  jest.config.js  util.js
e2e/tests/: de_results.js  embeddings.js  restore_view.js  test.js
example_data/: markers.json
public/: index.html  manifest.json  privacy_policy.html
src/: App.js  AppHeader.js  AppWrapper.js  Autocomplete.js  AutocompleteSelect.js  AutocompleteVirtualized.js  ByteRangeDataset.js  CanvasOverlayHd.js  CategoricalLegend.js  ChartToolbar.js  ChartUtil.js  ChiSquare.js  ChiSquare.test.js  CirroIcon.js  CirroTable.js  CirroTooltip.js  ColorSchemeLegend.js  ColorSchemeLegendWrapper.js  ColorSchemeSelector.js  CompositionPlot.js  CompositionPlots.js  ContinuousLegend.js  CustomError.js  DatasetSelector.js  DeleteDatasetDialog.js  DirectAccessDataset.js  DistributionGroup.js  DistributionPlots.js  DotPlot.js  DotPlotCanvas.js  DotPlotGroup.js  DotPlotJobResultOptions.js  DotPlotJobResultsPanel.js  DotPlotTable.js  DotPlots.js  DotPlotsPlotly.js  DraggableDivider.js  EditDatasetDialog.js  EditNewDatasetDialog.js  EditableColorScheme.js  (+64 more)
src/actions/: index.js
src/reducers/: index.js
src/scatter-gl/: index.ts  render.ts  scatter_plot.ts  scatter_plot_rectangle_selector.ts  scatter_plot_visualizer.ts  scatter_plot_visualizer_3d_labels.ts  scatter_plot_visualizer_canvas_labels.ts  scatter_plot_visualizer_sprites.ts  scatter_plot_visualizer_svg_labels.ts  styles.ts  types.ts  util.ts
tests/: conftest.py  create_test_data.py  test.parquet  test_api.py  test_de.py  test_dot_plot.py  test_embedding.py  test_feature.py  test_ids.py  test_prepare_data.py  test_slice.py  test_sparse.py
